--- a/style.css
+++ b/style.css
@@ -132,3 +132,36 @@ body{
 .quote-author{
     text-align: end;
 }
+
+.call-to-action{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
+    background-color: #3882F6;
+    padding: 30px 10%;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 8px;
+}
+
+#call-to-action-container{
+    color: #E5E7EB;
+}
+
+.call-to-action-title{
+    font-size: 18px;
+}
+
+.call-to-action-subtext{
+    margin: 0;
+    font-size: 12px;
+}
+
+.call-to-action-button{
+    background-color: #3882F6;
+    color: #E5E7EB;
+    border-radius: 4px;
+    border: solid 2px;
+    padding: 4px 20px;
+}
