Add style to footer

--- a/style.css
+++ b/style.css
@@ -165,3 +165,17 @@ body{
     border: solid 2px;
     padding: 4px 20px;
 }
+
+.footer{
+    align-content: center;
+    background-color: #1F2937;
+    margin-top: 60px;
+    height: 80px;
+}
+
+.footer-text{
+    color: #E5E7EB;
+    word-spacing: 2px;
+    font-size: 14px;
+    text-align: center;
+}
